--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,14 @@
       <div class = "ui container">
         <div class = "header item"><i class="code icon"></i> Blog Site</div>
         <a href = "/" class = "item">Home</a>
-        <a href = "/blogs/new" class = "item">New Post</a>
+        <% if(!currUser) {%>
+          <a href = '/login' class = 'item'>Login</a>
+          <a href = '/register' class = 'item'>Sign-up</a>
+        <% } else {%>
+          <a href = "/blogs/new" class = "item">New Post</a>
+          <a href = "/logout" class = "item">Logout</a>
+          <a href='/' class = 'item'>Signed in as <%= currUser.username %></a>
+        <% } %>
       </div>
     </div>
 
